@@ -27,6 +27,8 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+30-Nov-2010 Jean-Marie Simonet
+ # Updating JLanguageTest
 
 -------------------- 1.6.0 Beta15 Release [29-Nov-2010] ------------------
 
